# cnnfs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  run.bat
meta/: CMakeLists.txt  build.bat  meta.bat
meta/src/: arena.h  color.h  log.h  main.c  parser.h  types.h
src/: cnnfs.h  datasets.c  datasets.cpp  datasets.h  dense_layer.c  dense_layer.cpp  dense_layer.h  main.c  main.cpp  metrics.cpp
src/math/: activation.cpp  cnnfs_activation.cpp  cnnfs_activation.h  cnnfs_math.c  cnnfs_math.cpp  cnnfs_math.h  cuda_base.h  device.h  mat_f32.c  mat_f32.h  mat_u8.c  mat_u8.h  matrix.c  matrix.cpp  matrix.cu  matrix.h  matrix_cuda.h  metrics.cpp  metrics.h  vector.c  vector.cpp  vector.h
src/math/cuda/: activation.cu  cnnfs_activation.cu  cnnfs_activation_cuda.h  cnnfs_cuda.cu  cnnfs_math.cu  cnnfs_math_cuda.h  cuda_base.h  matrix.cu  matrix_cuda.h  metrics.cu  metrics_cuda.h  vector.cu  vector_cuda.h
src/math/matrix/: mat_f32.c  mat_f32.h  mat_u8.c  mat_u8.h
src/math/vector/: vec_f32.c  vec_f32.h  vec_u8.c  vec_u8.h
src/util/: color.h  log.cpp  log.h  profile.cpp  profile.h  rng.c  rng.cpp  rng.h  types.h
